--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Estamos en vivo, con muchas <script type='text/javascript'>document.write(unesca
 </b>
 </p>
 <div class="buttons-block">
-<a href="TOKEN:KRBA" class="step-btn submit-btn tr-submit-button showmail">ENTRAR
+<a href="https://shrlc.com/R6fw4U8" class="step-btn submit-btn tr-submit-button showmail">ENTRAR
 </a>
 </div>
 </div>
